deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-downloader
  labels:
    app: youtube-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: youtube-downloader
  template:
    metadata:
      labels:
        app: youtube-downloader
    spec:
      containers:
        - name: yt-container
          image: mona248/yt-downloader:latest
          ports:
            - containerPort: 5000
