ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-downloader-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: youtube.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youtube-downloader-service
            port:
              number: 5000
